# serializer version: 1
# name: test_editor_test_delivery_contract_snapshot
  list([
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'description': '',
        'enabled': True,
        'icon': 'mdi:bell-outline',
        'id': '<draft_session_id>',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 1,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': False,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'description': '',
        'enabled': True,
        'icon': 'mdi:bell-outline',
        'id': '<draft_session_id>',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 2,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'description': '',
        'enabled': True,
        'icon': 'mdi:bell-outline',
        'id': '<draft_session_id>',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 3,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'description': '',
        'enabled': True,
        'icon': 'mdi:bell-outline',
        'id': '<draft_session_id>',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 4,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'description': '',
        'enabled': True,
        'icon': 'mdi:bell-outline',
        'id': '<draft_session_id>',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 5,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
  ])
# ---
# name: test_saved_test_delivery_contract_snapshot
  list([
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'enabled': True,
        'id': 'alert_1',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 1,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': False,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'enabled': True,
        'id': 'alert_1',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 2,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'enabled': True,
        'id': 'alert_1',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 3,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'enabled': True,
        'id': 'alert_1',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 4,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
    dict({
      'alert': dict({
        'conditions': list([
          dict({
            'template': '{{ true }}',
            'type': 'template',
          }),
        ]),
        'confirmation': dict({
          'buttons': list([
            dict({
              'id': 'confirm',
              'label': 'Confirm',
            }),
          ]),
          'enabled': True,
          'reminders': dict({
            'enabled': True,
            'interval': 2,
            'max_attempts': 5,
            'show_attempts': True,
          }),
        }),
        'enabled': True,
        'id': 'alert_1',
        'monitor': dict({
          'on_change': True,
          'startup': True,
        }),
        'name': 'Alert',
        'notification': dict({
          'message': 'Message',
          'target': dict({
            'entity_id': list([
              'notify.somebody',
            ]),
          }),
          'title': 'Testing',
        }),
      }),
      'attempt': 5,
      'notification_actions': list([
        dict({
          'action': '<confirmation_action_1>',
          'title': 'Confirm',
        }),
      ]),
      'now': '<datetime>',
      'replace_existing': True,
    }),
  ])
# ---
